# tap-peloton

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-peloton.sh  tox.ini
.github/: dependabot.yml
tap_peloton/: client.py  streams.py  tap.py
tap_peloton/tests/: __init__.py  test_core.py
