[tool.poetry]
name = "tap-peloton"
version = "0.0.1"
description = "`tap-peloton` is a Singer tap for peloton, built with the Meltano SDK for Singer Taps."
authors = ["Taylor Murphy"]
keywords = [
    "ELT",
    "peloton",
]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.11"
pylotoncycle = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.8"
pydocstyle = "^6.3.0"
mypy = "^0.910"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-peloton = 'tap_peloton.tap:TapPeloton.cli'
